--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "flowbite-react": "^0.7.5",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-loading": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
